fix: gameplays corrections
