# api/urls.py
@@ -9,11 +9,11 @@ from rest_framework_simplejwt.views import (
 app_name = "api"
 
 router = DefaultRouter()
-router.register(r"games", views.GameplayViewSet, basename="gameplay")
+router.register(r"gameplays", views.GameplayViewSet, basename="gameplays")
 router.register(r"users", views.CustomUserViewSet, basename="users")
 
 urlpatterns = [
     path("", include(router.urls)),
-    path('token/', TokenObtainPairView.as_view(), name='token_obtain_pair'),
-    path('token/refresh/', TokenRefreshView.as_view(), name='token_refresh'),
+    path("token/", TokenObtainPairView.as_view(), name="token_obtain_pair"),
+    path("token/refresh/", TokenRefreshView.as_view(), name="token_refresh"),
 ]
